fixing scrolling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,17 @@
 html,
 body,
 #root {
-  position: fixed;
   top: 0;
   left: 0;
-  padding: 0;
-  margin: 0;
+  bottom: 0;
+  right: 0;
   width: 100%;
   height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: opacity 8s;
+  z-index: 1;
   background: linear-gradient(135deg, #4c8ac8 45%, #d4e5f6 100%);
   background-color: #4c8ac8;
   font-family: 'Rajdhani', sans-serif;
@@ -29,7 +33,6 @@ body,
 
 * {
   box-sizing: border-box;
-  touch-action: none !important;
 }
 
 button {
